revno: 10296 [merge] message:   (PT) Minor scrollbar + favorite issues fixed.
committer: Jan Henrik Overland <janhenrik.overland@gmail.com>
branch nick: dhis2
timestamp: Mon 2013-03-18 21:28:54 +0100

--- a/dhis-2/dhis-web/dhis-web-pivot/src/main/webapp/dhis-web-pivot/app/styles/style.css
+++ b/dhis-2/dhis-web/dhis-web-pivot/src/main/webapp/dhis-web-pivot/app/styles/style.css
@@ -65,31 +65,40 @@ body.x-windows {
 	-webkit-text-stroke: 0.2px #888;
 }
 
-	/* Scrollbar */
+	/* Scrollbar Webkit */
 ::-webkit-scrollbar {
-    width: 13px;
+    width: 9px;
+    height: 9px;
     border: 0 none;
 }
 
-::-webkit-scrollbar-track {
+::-webkit-scrollbar-track:horizontal {
     background-color: #ddd;
-    border-radius: 1px;
+    margin: 0 2px;
+    border-top: 2px solid white;
+    border-bottom: 2px solid white;
+}
+::-webkit-scrollbar-track:vertical {
+    background-color: #ddd;
     margin: 2px 0;
-    border-right: 3px solid white;
-    border-left: 1px solid white;
+    border-right: 2px solid white;
+    border-left: 2px solid white;
 }
 
-::-webkit-scrollbar-thumb {
+::-webkit-scrollbar-thumb:horizontal {
 	background-color: #bbb;
-    border-radius: 1px;
-    border-right: 3px solid white;
-    border-left: 1px solid white;
+    border-top: 2px solid white;
+    border-bottom: 2px solid white;
+}
+::-webkit-scrollbar-thumb:vertical {
+	background-color: #bbb;
+    border-right: 2px solid white;
+    border-left: 2px solid white;
 }
 
 .x-scroller-vertical {
 	border: 0 none;
 }
-
 
 	/* Disable class invisible */
 .pt-invisible .x-form-item-body {
